src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
*::-webkit-scrollbar {
  display: none;
}
.main-container {
  height: 100vh;
  width: 100%;
  overflow: hidden;
  position: relative;
  background-color: black;
  color:whitesmoke;
  transition: 0.5s;
  
}
.sidebar h5{
  cursor: pointer;
}
.search-bar {
  background-color: #292219;
}
.search-bar input {
  background: transparent;
  border: none;
  outline: none;
  
}
.play-btn{
    border: none;
    outline: none;
    background: transparent;
    color: whitesmoke;
}
.thumbnail {
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

.song-list {
  height: calc(100vh - 50px); 
  overflow-y: auto; 
  padding-bottom: 10px;
}
.song-list-top{
    position: sticky;
    top: 0px;
   
    padding: 10px 0px;
    z-index: 10; /* Ensure it stays above the list */
}
.song {
  cursor: pointer;
}
.song:hover {
  background-color: #292219;
}
.active-song {
  background-color: #292219;
}

.toggle-btn{
  display: none;
}
.album{
  width: 75%;
}
.album-detail{
  margin: 10px 0;
}

.profile-img{
  border-radius: 50%;
  width: 50px;
  height: 50px;
  object-fit: cover;
  position: absolute;
  bottom: 10px;
  left: 10px;
}

@media (max-width:768px) {
  .sidebar{
    position: fixed;
    height: 100vh;
    top: 0;
    left: 0;
    background-color: black;
    z-index: 99;
    transform: translateX(-100%);
    transition: 0.3s;
  }
  .song-list{
    height: calc(100vh - 100px); /* Adjust height to prevent cutoff */
    padding: 0px 20px;
    overflow-y: auto; /* Ensure scrolling is enabled */

  }
  
  .open{
    transform: translateX(0);
  }
  .toggle-btn{
    display: block;
  }
  .player{
    position: fixed;
    bottom: 0;
    background-color: black;
    left: 0;
    padding: 0;
    display: flex;  
  }
  
  
  .album{
    width: 90%;
    margin: auto;
  }
  .album-detail{
    margin: 0px;
  }
  .album-detail h2{
    line-height: 10px;
  }
  .album-top{
    display:flex;
    align-items: center;
    justify-content: start;
    gap: 5px;
  }
  .song-list{
    height: calc(100vh - 150px); 
  }
  .player img{
    width: 50px;
  }
}

